test_data_legacy/lexer/valid/comments/c_between_tokens_valid.ajis
{
  /* comment */ "key" /* comment */: /* comment */ "value" /* comment */
}
