test_data_legacy/lexer/invalid/comments/c_comment_in_token_invalid.ajis
{
  "field": tr/* comment inside token */ue
}
